--- a/ImageRecognizationTest/MainWindow.xaml
+++ b/ImageRecognizationTest/MainWindow.xaml
@@ -1,9 +1,12 @@
 ﻿<Window x:Class="ImageRecognizationTest.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:my="clr-namespace:ImageRecognizationTest"
         Title="洗濯タグ認識" Height="350" Width="525">
 
-    <ScrollViewer VerticalScrollBarVisibility="Auto" DragEnter="Grid_DragEnter" DragLeave="Grid_DragLeave" Drop="Grid_Drop">
+    <ScrollViewer VerticalScrollBarVisibility="Auto" >
+        <ListView AllowDrop="True" Drop="ListView_Drop" Name="imageList">
+        </ListView>
     </ScrollViewer>
 </Window>
     
