--- a/ImageRecognizationTest/MainWindow.xaml
+++ b/ImageRecognizationTest/MainWindow.xaml
@@ -2,8 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:my="clr-namespace:ImageRecognizationTest"
-        Title="洗濯タグ認識" Height="350" Width="525">
-
+        Title="洗濯タグ認識" Height="350" Width="525" KeyUp="Window_KeyUp"
+        >
     <ScrollViewer VerticalScrollBarVisibility="Auto" >
         <ListView AllowDrop="True" Drop="ListView_Drop" Name="imageList">
         </ListView>
